--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,7 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     globals:
+        csrf:         "@security.csrf.token_manager"
         locale:       "%locale%"
         theme:        "%theme%"
 
